<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:id="@+id/container_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/container_overview_label"
            style="@style/editor_title_style" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/editor_field_style" />


            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="4dp">
                <EditText
                    android:id="@+id/edit_product_price"
                    android:hint="@string/hint_product_price"
                    android:inputType="number"
                    tools:text="1000"
                    android:paddingLeft="10dp"
                    style="@style/editor_field_style" />

                <TextView
                    android:id="@+id/label_weight_units"
                    android:text="@string/unit_currency"
                    style="@style/editor_unit_style"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/editor_field_style" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/container_detail_label"
            style="@style/editor_title_style" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_supplier"
                android:hint="@string/hint_product_supplier"
                android:inputType="textCapWords"
                style="@style/editor_field_style" />

            <EditText
                android:id="@+id/edit_product_description"
                android:hint="@string/hint_product_description"
                android:inputType="textCapWords"
                style="@style/editor_field_style" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_tempertature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/container_tempertature_label"
            style="@style/editor_title_style" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/edit_product_temperature_spinner"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
